# gol-voos

./: LICENSE  README.md  pyproject.toml
src/gol_voos/: dates.py  gol.py  html_scraper.py  util.py
